--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hi, my name is Hao-Zhong, Yang.</h1>
+  <p>I’m a junior-year student in the Computer Science Internet Engineering department of Tamkang University.</p>
+  <p>The opportunity to become interested in information was when I took elective courses in high school. 
+    I participated in laser cutting, Arduino and radio operations. 
+    It was also the first time that I obtained a professional license at NCC (National Communications Commission) with my friend. 
+    It was just that I completed the steps in sequence according to the instructions of the instructor at that time, 
+    which was my initial understanding of the information.
+  </p>
+  <p>
+    However, observing that through these processes, 
+    people still have to operate the physical equipment in person, 
+    and the hardware may be just a window for the interaction between the software and humans, 
+    and it is still the software that actually executes the calculation process, 
+    so I thought the software may be the core of every electronic devices at that time. 
+    So I decided to study Information Engineering. 
+  </p>
 </body>
 </html>
