--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <body>
   <h1>Hi, my name is Hao-Zhong, Yang.</h1>
-  <p>I’m a junior-year student in the Computer Science Internet Engineering department of Tamkang University.</p>
-  <p>The opportunity to become interested in information was when I took elective courses in high school. 
+  <p>
+    I’m a junior-year student in the Computer Science Internet Engineering department of Tamkang University.
+  </p><br>
+  <p>
+    The opportunity to become interested in information was when I took elective courses in high school. 
     I participated in laser cutting, Arduino and radio operations. 
     It was also the first time that I obtained a professional license at NCC (National Communications Commission) with my friend. 
     It was just that I completed the steps in sequence according to the instructions of the instructor at that time, 
     which was my initial understanding of the information.
-  </p>
+  </p><br>
   <p>
     However, observing that through these processes, 
     people still have to operate the physical equipment in person, 
