--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Hi, my name is Hao-Zhong, Yang.</h1>
   <p>
-    I’m a junior-year student in the Computer Science Internet Engineering department of Tamkang University.
+    I'm a junior-year student in the Computer Science Internet Engineering department of Tamkang University.
   </p><br>
   <p>
     The opportunity to become interested in information was when I took elective courses in high school. 
