--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <h1>Hi, my name is Hao-Zhong, Yang.</h1>
+  <h1>
+    Curriculum vitae:
+  </h1>
+  <h2>
+    Hi, my name is Hao-Zhong, Yang.
+  </h2>
   <p>
     I am a junior-year student in the Computer Science Internet Engineering department of Tamkang University.
-  </p><br>
+  </p>
+  <br>
   <p>
     The opportunity to become interested in information was when I took elective courses in high school. 
     I participated in laser cutting, Arduino and radio operations. 
     It was also the first time that I obtained a professional license at NCC (National Communications Commission) with my friend. 
     It was just that I completed the steps in sequence according to the instructions of the instructor at that time, 
     which was my initial understanding of the information.
-  </p><br>
+  </p>
+  <br>
   <p>
     However, observing that through these processes, 
     people still have to operate the physical equipment in person, 
