--- a/index.html
+++ b/index.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Build Start</title>
+<link rel="stylesheet" herf="style.css">
+</head>
 <body>
-  <h1>
-    Curriculum vitae:
-  </h1>
-  <h2>
-    Hi, my name is Hao-Zhong, Yang.
-  </h2>
-  <p>
-    I am a junior-year student in the Computer Science Internet Engineering department of Tamkang University.
-  </p>
-  <br>
-  <p>
-    The opportunity to become interested in information was when I took elective courses in high school. 
-    I participated in laser cutting, Arduino and radio operations. 
-    It was also the first time that I obtained a professional license at NCC (National Communications Commission) with my friend. 
-    It was just that I completed the steps in sequence according to the instructions of the instructor at that time, 
-    which was my initial understanding of the information.
-  </p>
-  <br>
-  <p>
-    However, observing that through these processes, 
-    people still have to operate the physical equipment in person, 
-    and the hardware may be just a window for the interaction between the software and humans, 
-    and it is still the software that actually executes the calculation process, 
-    so I thought the software may be the core of every electronic devices at that time. 
-    So I decided to study Information Engineering. 
-  </p>
+<h1>Project C:</h1>
+
+<h3>/Update Format/</h3>
+<p>1) User: /n</p>
+<p>2) Update Time: /n</p>
+<p>3) Detail: /n</p>
+
 </body>
 </html>
