--- a/index.html
+++ b/index.html
@@ -1,268 +1,67 @@
-<!DOCTYPE html> 
-<html> 
-  
-<head> 
-    <title>HTML</title> 
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zem Yang - 作品集</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.js"
-        integrity="sha512-BbVEDjbqdN3Eow8+empLMrJlxXRj5nEitiCAK5A1pUr66+jLVejo3PmjIaucRnjlB0P9R3rBUs3g5jXc8ti+fQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.min.js"
-        integrity="sha512-iphNRh6dPbeuPGIrQbCdbBF/qcqadKWLa35YPVfMZMHBSI6PLJh1om2xCTWhpVpmUyb4IvVS9iYnnYMkleVXLA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Hero / 首頁 -->
+<section class="hero">
+    <div class="container">
+        <img src="img/profile.jpg" alt="個人照片" class="profile-pic">
+        <h1>Zem Yang</h1>
+        <p>Python 開發 & 影像處理專案</p>
+        <a href="#portfolio" class="btn">我的作品</a>
+        <a href="resume.pdf" class="btn btn-secondary" download>下載履歷</a>
+    </div>
+</section>
 
-    <style> 
-        .num_1{
-            position: fixed;
-            left:10px;
-            top: 40px;
-        }
-        .num_2{
-            position: fixed;
-            left:400px;
-            top: 40px;
-        }
-        .method{
-            position: fixed;
-            left:270px;
-            top: 44px;
-        }
-        select{
-            font-size: 20px;
-            padding: 10px;
-            border-radius: 5px;
-        }
+<!-- 作品集 -->
+<section id="portfolio">
+    <div class="container">
+        <h2>作品集</h2>
+        <div class="grid" id="portfolio-grid"></div>
+    </div>
+</section>
 
-        input[type="button"] { 
-            width: 100%; 
-            background-color: black;
-            color: aliceblue;
-            padding: 14px; 
-            font-size: 16px; 
-            font-weight: bold; 
-            border: none; 
-            border-radius: 5px;
-        } 
-        input[type="button"]:hover {
-            background-color:rgb(255, 253, 143);
-            color:blue;
-        }
-        input[type="text"] { 
-            padding: 14px; 
-            font-size: 16px; 
-            font-weight: bold; 
-            border: none; 
-            border-radius: 5px; 
-            border: 2px solid black; 
-            text-align: right;
-        } 
-        .result{
-            font-size:36px;
-            position: fixed;
-            left: 660px;
-            top: 44px;
-            background-color:rgb(200, 200, 200);
-            border: none;
-            border-radius: 5px;
-        }
-        .result:hover{
-            background-color:rgb(235, 235, 235);
-        }
+<!-- 關於我 -->
+<section id="about">
+    <div class="container">
+        <h2>關於我</h2>
+        <p>我是一位熱愛 Python 與影像處理的開發者，喜歡製作實用工具並分享給大家。專注於 GUI 開發、模組化設計與批次自動化處理。</p>
+    </div>
+</section>
 
-        .output{
-            position: fixed;
-            left: 705px;
-            top: 42px;
-        }
-        
-        .clear{
-            position: fixed;
-            left: 705px;
-            top: 100px;
-            font-size: 16px;
-            padding: 10px;
-            color: white;
-            background-color: black;
-            border-radius: 5px;
-        }
-        .clear:hover{
-            background-color:rgb(100, 100, 100);
-        }
-    </style> 
-</head> 
-  
-<body> 
+<!-- 技能 -->
+<section id="skills">
+    <div class="container">
+        <h2>技能</h2>
+        <div class="skills-grid">
+            <div class="skill">Python</div>
+            <div class="skill">Pillow / 影像處理</div>
+            <div class="skill">GUI 開發 (Tkinter / CustomTkinter)</div>
+            <div class="skill">Blender / 3D 模型</div>
+        </div>
+    </div>
+</section>
 
-    <table id="calcu_1" class="num_1"> 
-        <tr> 
-            <td colspan="3">
-                <input type="text" id="result_1"> 
-            </td> 
-        </tr> 
-  
-        <tr> 
-            <td><input type="button" id="t11" value="1" onclick="dis('1', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-            <td><input type="button" id="t12" value="2" onclick="dis('2', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-            <td><input type="button" id="t13" value="3" onclick="dis('3', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-        </tr>
-        <tr> 
-            <td><input type="button" id="t14" value="4" onclick="dis('4', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-            <td><input type="button" id="t15" value="5" onclick="dis('5', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-            <td><input type="button" id="t16" value="6" onclick="dis('6', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-        </tr> 
-        <tr> 
-            <td><input type="button" id="t17" value="7" onclick="dis('7', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-            <td><input type="button" id="t18" value="8" onclick="dis('8', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-            <td><input type="button" id="t19" value="9" onclick="dis('9', 'calcu_1')" onkeydown="displayNumbers(event)"></td> 
-        </tr> 
-        <tr> 
-            <td colspan="2"><input type="button" id="t10" value="0" onclick="dis('0', 'calcu_1')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t1c" value="c" onclick="clr()" /></td>
-        </tr> 
-    </table>
+<!-- 聯絡我 -->
+<section id="contact">
+    <div class="container">
+        <h2>聯絡我</h2>
+        <p>電子郵件: <a href="mailto:your_email@example.com">your_email@example.com</a></p>
+        <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
+        <div class="social">
+            <a href="#">LinkedIn</a> | <a href="#">其他社群</a>
+        </div>
+    </div>
+</section>
 
-    <select id="method_id" class="method">
-        <option id="">Method</option>
-        <option id="tplus" >+ PLUS</option>
-        <option id="tminus" >- MINUS</option>
-        <option id="tmult" >x MUL</option>
-        <option id="tdiv" >/ DIV</option>
-    </select>
-
-    <table id="calcu_2" class="num_2">
-        <tr>
-            <td colspan="3">
-                <input type="text" id="result_2">
-            </td>
-        </tr>
-    
-        <tr>
-            <td><input type="button" id="t21" value="1" onclick="dis('1', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t22" value="2" onclick="dis('2', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t23" value="3" onclick="dis('3', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-        </tr>
-        <tr>
-            <td><input type="button" id="t24" value="4" onclick="dis('4', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t25" value="5" onclick="dis('5', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t26" value="6" onclick="dis('6', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-        </tr>
-        <tr>
-            <td><input type="button" id="t27" value="7" onclick="dis('7', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t28" value="8" onclick="dis('8', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t29" value="9" onclick="dis('9', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-        </tr>
-        <tr>
-            <td colspan="2"><input type="button" id="t20" value="0" onclick="dis('0', 'calcu_2')" onkeydown="displayNumbers(event)"></td>
-            <td><input type="button" id="t2c" value="c" onclick="clr()"/></td>
-        </tr>
-    </table>
-    <button class="result">=</button>
-    <input class="output" type="text" id="result_3">
-    <button onclick="clearAll()" class="clear">Clear All</button>
-
-
-    <script>
-        var expression = "";
-        var lastActiveInput = "";
-
-        function setLastActiveInput(inputId) {
-            lastActiveInput = inputId;
-        }
-
-        function focusLastActiveInput() {
-            if (lastActiveInput !== "") {
-                document.getElementById(lastActiveInput).focus();
-            }
-        }
-
-        document.querySelector('.result').addEventListener('click', function () {
-            var num1 = parseFloat(document.getElementById("result_1").value);
-            var operator = document.getElementById("method_id").value;
-            var num2 = parseFloat(document.getElementById("result_2").value);
-
-            if (!isNaN(num1) && !isNaN(num2) && operator !== "choose method") {
-                var result;
-                switch (operator) {
-                    case '+ PLUS':
-                        result = num1 + num2;
-                        break;
-                    case '- MINUS':
-                        result = num1 - num2;
-                        break;
-                    case 'x MUL':
-                        result = num1 * num2;
-                        break;
-                    case '/ DIV':
-                        result = num1 / num2;
-                        break;
-                    default:
-                        result = 'Invalid operator';
-                }
-
-                document.getElementById("result_3").value = result;
-            } else {
-                document.getElementById("result_3").value = 'Invalid expression';
-            }
-        });
-
-        function dis(val, tableId) {
-            if (tableId === "calcu_1") {
-                document.getElementById("result_1").value += val;
-                setLastActiveInput("result_1");
-            } else if (tableId === "calcu_2") {
-                document.getElementById("result_2").value += val;
-                setLastActiveInput("result_2");
-            }
-        }
-
-        function displayNumbers(event) {
-            var method = document.getElementById("method_id").value;
-            if (method === "choose method" && /[0-9]/.test(event.key)) {
-                document.getElementById("result_1").value += event.key;
-                setLastActiveInput("result_1");
-            } else if (/[0-9]/.test(event.key)) {
-                document.getElementById("result_2").value += event.key;
-                setLastActiveInput("result_2");
-            }
-        }
-
-        var cal1 = document.getElementById("calcu_1");
-        cal1.onkeyup = function (event) {
-            if (event.keyCode === 13) {
-                solve();
-            }
-        }
-
-        function solve() {
-            let x = document.getElementById("result_2").value;
-            let y = math.evaluate(x);
-            document.getElementById("result_2").value = y;
-            setLastActiveInput("result_2");
-        }
-
-        function clr() {
-            var method = document.getElementById("method_id").value
-            if (method === "choose method") {
-                document.getElementById("result_1").value = "";
-                setLastActiveInput("result_1");
-            } else {
-                document.getElementById("result_2").value = "";
-                setLastActiveInput("result_2");
-            }
-        }
-
-        document.querySelector('.result').addEventListener('click', function () {
-            solve();
-        });
-
-        function clearAll() {
-            document.getElementById("result_1").value = "";
-            document.getElementById("result_2").value = "";
-            document.getElementById("result_3").value = "";
-            setLastActiveInput("");
-            focusLastActiveInput(); 
-        }    
-    </script>
-</body> 
-  
-</html> 
+<script src="script.js"></script>
+</body>
+</html>
