--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zem Yang - 作品集</title>
+    <title>Hao-Zhong YANG - 作品集</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <section class="hero">
     <div class="container">
         <img src="img/profile.jpg" alt="個人照片" class="profile-pic">
-        <h1>Zem Yang</h1>
+        <h1>Hao-Zhong YANG</h1>
         <p>Python 開發 & 影像處理專案</p>
         <a href="#portfolio" class="btn">我的作品</a>
         <a href="resume.pdf" class="btn btn-secondary" download>下載履歷</a>
@@ -33,7 +33,7 @@
 <section id="about">
     <div class="container">
         <h2>關於我</h2>
-        <p>我是一位熱愛 Python 與影像處理的開發者，喜歡製作實用工具並分享給大家。專注於 GUI 開發、模組化設計與批次自動化處理。</p>
+        <p>CONTENTS</p>
     </div>
 </section>
 
@@ -43,9 +43,9 @@
         <h2>技能</h2>
         <div class="skills-grid">
             <div class="skill">Python</div>
-            <div class="skill">Pillow / 影像處理</div>
-            <div class="skill">GUI 開發 (Tkinter / CustomTkinter)</div>
-            <div class="skill">Blender / 3D 模型</div>
+            <div class="skill">CONTENTS</div>
+            <div class="skill">CONTENTS</div>
+            <div class="skill">CONTENTS</div>
         </div>
     </div>
 </section>
@@ -54,8 +54,8 @@
 <section id="contact">
     <div class="container">
         <h2>聯絡我</h2>
-        <p>電子郵件: <a href="mailto:your_email@example.com">your_email@example.com</a></p>
-        <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
+        <p>電子郵件: <a href="walteryang9311@gmail.com">walteryang9311@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/Hao20210808">github.com/Hao20210808</a></p>
         <div class="social">
             <a href="#">LinkedIn</a> | <a href="#">其他社群</a>
         </div>
