--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <img src="img/profile.jpg" alt="個人照片" class="profile-pic">
         <h1>Hao-Zhong YANG</h1>
-        <p>Python 開發 & 影像處理專案</p>
+        <p>CONTENTS</p>
         <a href="#portfolio" class="btn">我的作品</a>
         <a href="resume.pdf" class="btn btn-secondary" download>下載履歷</a>
     </div>
